--- a/package.json
+++ b/package.json
@@ -36,14 +36,18 @@
     "@types/jwt-decode": "^3.1.0",
     "dayjs": "^1.11.13",
     "dotenv-cli": "^8.0.0",
+    "mui-image": "^1.0.7",
+    "path": "^0.12.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.1.5",
     "serve": "^14.2.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.20.0",
     "@types/eslint": "^9.6.1",
+    "@types/mui-image": "^1",
     "@types/node": "^22.13.1",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
@@ -64,7 +68,8 @@
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.24.0",
     "vite": "^6.1.0",
-    "vite-plugin-checker": "^0.8.0"
+    "vite-plugin-checker": "^0.8.0",
+    "vite-tsconfig-paths": "^5.1.4"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx}": [
