Update to build

--- a/.env.demo
+++ b/.env.demo
@@ -1,9 +1,9 @@
-PORT=8520
+PORT=9002
 
 VITE_APP_TITLE=Lulumedic-CMS-demo
 
 # Backend server
-REACT_APP_TCS_URI=https://tbmtcm-demo.petarainsoft.com:8500/api
+REACT_APP_TCS_URI=https://lulumedic-demo.petarainsoft.com:9000/api
 
 # App's running environment
 NODE_ENV="development"
