--- a/.env.development
+++ b/.env.development
@@ -1,9 +1,9 @@
-VITE_PORT=8520
+VITE_PORT=9002
 
 VITE_APP_TITLE=Lulumedic-CMS-development
 
 # Backend server
-REACT_APP_TCS_URI=http://localhost:8500/api
+REACT_APP_TCS_URI=https://lulumedic-demo.petarainsoft.com:9000/api
 
 # App's running environment
 NODE_ENV="development"
