Update reservation detail

--- a/.env.demo
+++ b/.env.demo
@@ -3,7 +3,7 @@ PORT=9002
 VITE_APP_TITLE=Lulumedic-CMS-demo
 
 # Backend server
-REACT_APP_TCS_URI=https://lulumedic-demo.petarainsoft.com:9000/api
+VITE_APP_API_URI=https://lulumedic-demo.petarainsoft.com:9000/api
 
 # App's running environment
 NODE_ENV="development"
