--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@mui/x-data-grid": "^7.26.0",
     "@mui/x-date-pickers": "^7.26.0",
     "@types/jwt-decode": "^3.1.0",
+    "axios": "^1.7.9",
     "dayjs": "^1.11.13",
     "dotenv-cli": "^8.0.0",
     "mui-image": "^1.0.7",
