--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "dayjs": "^1.11.13",
     "dotenv-cli": "^8.0.0",
     "mui-image": "^1.0.7",
+    "notistack": "^3.0.2",
     "path": "^0.12.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
