--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "path": "^0.12.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.1.5",
     "serve": "^14.2.4"
   },
