--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "mui-image": "^1.0.7",
     "notistack": "^3.0.2",
     "path": "^0.12.7",
+    "qs": "^6.14.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
@@ -52,6 +53,7 @@
     "@types/eslint": "^9.6.1",
     "@types/mui-image": "^1",
     "@types/node": "^22.13.1",
+    "@types/qs": "^6",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
