--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@emotion/styled": "^11.14.0",
     "@eslint/compat": "^1.2.6",
     "@fontsource/roboto": "^5.1.1",
+    "@hookform/resolvers": "^4.1.2",
     "@mui/icons-material": "^6.4.3",
     "@mui/lab": "6.0.0-beta.26",
     "@mui/material": "^6.4.3",
@@ -45,7 +46,8 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.1.5",
-    "serve": "^14.2.4"
+    "serve": "^14.2.4",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
