--- a/.env.development
+++ b/.env.development
@@ -6,7 +6,7 @@ VITE_APP_TITLE=Lulumedic-CMS-development
 VITE_APP_API_URI=https://lulumedic-demo.petarainsoft.com:9000/api
 
 # App's running environment
-NODE_ENV="development"
+VITE_NODE_ENV="development"
 
 # readmore: https://create-react-app.dev/docs/advanced-configuration/
 ESLINT_NO_DEV_ERRORS=true
