--- a/.env.production
+++ b/.env.production
@@ -6,4 +6,4 @@ VITE_APP_TITLE=Lulumedic-CMS-production
 REACT_APP_TCS_URI=
 
 # App's running environment
-NODE_ENV="production"
+VITE_NODE_ENV="production"
